imagem acai entrada

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ Delivery entregas somente em Marília!">
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-9">
+            <div class="col-lg-12 col-lg-9">
                 <div class="image-wrapper">
-                    <img src="assets/images/acai-1200x800.jpg" alt="Madame Açaí">
+                    <img src="assets/images/catia.jpg" alt="Madame Açaí">
                     <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">
                         Açaí e Complementos!!!</p>
                 </div>
